docs: add more details to be shown in swagger and update openapi
